--- a/templates/posts.jade
+++ b/templates/posts.jade
@@ -1,13 +1,24 @@
 extends layout
 block main
-  #posts
-    h1 E-Fever Blog
-    div Collaboration and Radiation over Hand-off and Refrigeration
-    if collections.posts && collections.posts.length > 0
-      each post in collections.posts
-        h2
-          a(href='/' + post.path)!= post.title
-        div!= post.excerpt
-    else
-      h2= collections.posts.length
-      h2 there ain't no posts here, man
+  div(class='demo-blog mdl-layout mdl-js-layout has-drawer is-upgraded')
+    main(class='mdl-layout__container')
+      div(class='demo-blog__posts mdl-grid')
+        div(class='mdl-card road mdl-cell mdl-cell--12-col')
+          div(class='mdl-card__media mdl-color-text--grey-50 ')
+            h1 E-Fever Blog
+            div Collaboration and Radiation over Hand-off and Refrigeration
+        if collections.posts && collections.posts.length > 0
+          each post in collections.posts
+            div(class='mdl-card ' + post.coverImage + ' mdl-cell mdl-cell--12-col')
+              div(class='mdl-card__media mdl-color-text--grey-50 ')
+                h3
+                  a(href='/' + post.path)!= post.title
+              div(class='mdl-card__supporting-text mdl-color-text--grey-600')!= post.excerpt
+              div(class='mdl-card__supporting-text meta mdl-color-text--grey-600')
+                .minilogo
+                div
+                  strong!=post.author
+                  span!=moment(post.publishDate).format("D-MMM-YYYY")
+        else
+          h3= collections.posts.length
+          h3 there ain't no posts here, man
