--- a/templates/posts.jade
+++ b/templates/posts.jade
@@ -19,7 +19,7 @@ block main
     div(class='heading-section mdl-shadow--4dp')
       div(class='heading-width mdl-card mdl-cell--12-col heading-bg')
         div(class='heading-title')
-          h1 E-fever
+          h1 E-Fever
           h5 Collaboration and Radiation over Hand-off and Refrigeration
   div(class='demo-blog')
     div(class='demo-blog__posts mdl-grid')
