Fixed social media links

--- a/templates/post.jade
+++ b/templates/post.jade
@@ -22,13 +22,13 @@ block main
               span!=moment(publishDate).format("D-MMM-YYYY")
             div(class='mdl-layout-spacer')
             div(style='display:inline-block;')
-              a(href='https://www.facebook.com/sharer/sharer.php?u=http://e-fever.github.io/posts/'+post+'/' target='_blank')
+              a(href='https://www.facebook.com/sharer/sharer.php?u=http://e-fever.github.io/posts/#{title.toLowerCase().replace(/\ /g,"-")}/index.html' target='_blank')
                 img(class='social-media-img' src='../../images/ic_facebook.png')
-              a(href='https://plus.google.com/share?url=http://e-fever.github.io/posts/'+post+'/' target='_blank')
+              a(href='https://plus.google.com/share?url=http://e-fever.github.io/posts/#{title.toLowerCase().replace(/\ /g,"-")}/index.html' target='_blank')
                 img(class='social-media-img' src='../../images/ic_google.png')
-              a(href='https://www.linkedin.com/shareArticle?mini=true&url=http://e-fever.github.io/posts/'+post+'/' target='_blank')
+              a(href='https://www.linkedin.com/shareArticle?mini=true&url=http://e-fever.github.io/posts/#{title.toLowerCase().replace(/\ /g,"-")}/index.html' target='_blank')
                 img(class='social-media-img' src='../../images/ic_linkedin.png')
-              a(href='https://twitter.com/home?status=http://e-fever.github.io/posts/'+post+'/' target='_blank')
+              a(href='https://twitter.com/home?status=http://e-fever.github.io/posts/#{title.toLowerCase().replace(/\ /g,"-")}/index.html' target='_blank')
                 img(class='social-media-img' src='../../images/ic_twitter.png')
       div(class='footer-section' align='center')
         p Copyright © 2015 E-Fever Limited All rights reserved.
