--- a/templates/post.jade
+++ b/templates/post.jade
@@ -14,6 +14,11 @@ block main
           div(class='post')
             div(class='meta')
             div(class='mdl-color-text--grey-700 mdl-card__supporting-text' align='left')!= contents
+            div(id='disqus_thread')
+          script
+            include ../src/js/disqus.js
+          noscript != Please enable JavaScript to view the 
+          a(href='https://disqus.com/?ref_noscript' rel='nofollow') != comments powered by Disqus.
           div(class='mdl-card__supporting-text meta mdl-color-text--grey-600')
             div(class='avatar')
               img(src='../../images/'+author+'.jpg')
