--- a/templates/post.jade
+++ b/templates/post.jade
@@ -13,7 +13,7 @@ block main
             h3= title
           div(class='post')
             div(class='meta')
-            div(class='mdl-color-text--grey-700 mdl-card__supporting-text' align='left')!= contents
+            div(class='mdl-color-text--grey-700 mdl-card__supporting-text' align='left' style='padding-left:0px; padding-right:0px;')!= contents
           div(class='mdl-card__supporting-text meta mdl-color-text--grey-600')
             div(class='avatar')
               img(src='../../images/'+author+'.jpg')
