Move jquery.js into js folder

--- a/templates/posts.jade
+++ b/templates/posts.jade
@@ -1,7 +1,7 @@
 extends layout
 block main
   script
-    include ../src/jquery.js
+    include ../src/js/jquery.js
   script(type='text/javascript').
     if($(window).width() <= 1025){
       $("#drawer").removeClass("mdl-layout");
